# rs-soroban-client

./: .gitignore  .gitmodules  ASYNC_PATTERNS.md  Cargo.toml  Makefile  README.md
docs/: logging.md  production-checklist.md
examples/: async_patterns.rs  async_real_world.rs  async_service_complete.rs  counter.wasm  create_account.rs  deploy.rs  events.rs  invoke.rs  payment.rs  simulation_demo.rs  soroban_auth_contract.wasm
examples/axum/: main.rs
sdemo/: Cargo.toml  README.md
sdemo/src/: main.rs
src/: async_utils.rs  contract_spec.rs  error.rs  friendbot.rs  http_client.rs  jsonrpc.rs  lib.rs  server.rs  soroban_rpc.rs  tests.rs  transaction.rs
