[package]
name = "soroban-client"
version = "0.3.5"
edition = "2021"
description = "A high-level library Rust client library for interacting with Soroban smart contracts on the Stellar blockchain"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rahul-soshte/rs-soroban-client"
keywords = ["stellar", "soroban", "rust"]
authors = ["Rahul Soshte <rahul.soshte47@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# stellar-baselib = {path = "stellar-baselib"}  # Useful for local development, but not for publishing
stellar-baselib = "0.4.4"
stellar-xdr =  { version = "22.0.0", default-features = true, features = ["base64", "std", "next"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.20", features = ["json"] }
http = "0.2.9"
futures = "0.3"
hex = "0.4"
tracing = "0.1.40"

