[package]
name = "soroban-client"
version = "0.4.5"
edition = "2021"
description = "A high-level library Rust client library for interacting with Soroban smart contracts on the Stellar blockchain"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rahul-soshte/rs-soroban-client"
keywords = ["stellar", "soroban", "rust"]
authors = ["Rahul Soshte <rahul.soshte47@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stellar-baselib = { version = "0.4.9" }     # Useful for local development, but not for publishing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.20", features = ["json"] }
futures = "0.3"
hex = "0.4"
tracing = "0.1.40"
thiserror = { version = "2.0.9" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full", "macros"] }
base64 = "0.22.1"
wiremock = "0.6.2"

[features]
default = []
next = ["stellar-baselib/next"]
