[package]
name = "sdemo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soroban-client = { path = "../" }
stellar-strkey = "0.0.9"
tokio = { version = "1", features = ["full"] }
stellar-xdr =  { version = "22.0.0", default-features = true, features = ["base64", "std", "next", "serde", "alloc"] }
hex = "0.4.3"